fixed css and para id so no overlapping

--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -69,7 +69,7 @@ p.callout {
 #secondLayout main {
     display: grid;
     grid-template-columns: repeat(6, calc(100% / 6) );
-    grid-template-rows: repeat(12, auto);
+    grid-template-rows: repeat(13, auto);
     grid-template-areas:
         'title title title title title title'
         '. p1 p1 . . .'
@@ -82,7 +82,8 @@ p.callout {
         '. . p8 p8 . .'
         '. p9 p9 c4 c4 .'
         '. . p10 p10 . .'
-        '. p11 p11 . . .';
+        '. . . . p11 p11'
+        'p12 p12 . . . .';
 }
 
 /* assigning grid area names to DOM elements */
@@ -98,6 +99,7 @@ p.callout {
 #secondLayout #para9 { grid-area: p9; }
 #secondLayout #para10 { grid-area: p10; }
 #secondLayout #para11 { grid-area: p11; }
+#secondLayout #para12 { grid-area: p12; }
 #secondLayout #callout1 { grid-area: c1; }
 #secondLayout #callout2 { grid-area: c2; }
 #secondLayout #callout3 { grid-area: c3; }
